fleet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
  labels:
    app: my-website
spec:
  replicas: 2  # Adjust replicas as needed
  selector:
    matchLabels:
      app: my-website
  template:
    metadata:
      labels:
        app: my-website
    spec:
      containers:
        - name: my-portfolio
          image: hoffeloffe/my-portfolio:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
